Closed Bug 1133526 Opened 10 years ago Closed 10 years ago

Ensure unsupported Silk configurations don't crash

Categories

(Firefox :: General, defect, P1)

x86_64
All
defect

Tracking

()

RESOLVED FIXED
Firefox 39
Tracking Status
firefox38 --- fixed
firefox39 --- fixed

People

(Reporter: mchang, Assigned: mchang)

References

()

Details

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1128165 +++ From https://bugzilla.mozilla.org/show_bug.cgi?id=1128165#c11 Ensure that unsupported silk configurations such as the vsync compositor enabled but hardware-vsync disabled doesn't actually crash, but instead just disables silk.
Just a small check that we really only enable the vsync compositor or refresh driver if both the pref and hardware vsync are enabled.
Attachment #8568040 - Flags: review?(bugmail.mozilla)
Attachment #8568040 - Flags: review?(bugmail.mozilla) → review+
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 39
Comment on attachment 8568040 [details] [diff] [review] Ensure vsync compositor and refresh driver are only enabled if hardware vsync is enabled Approval Request Comment [Feature/regressing bug #]: Project Silk, but 1071275 [User impact if declined]: If a user enables silk on nightly, then goes back to the dev edition, they can get into an infinite crash loop if they use the same profile. The bug only occurs due to a user enabling a pref in nightly in about:config then going back to the dev edition with the same profile. [Describe test coverage new/current, TreeHerder]: Manual testing, only occurs due to this patch not being uplifted before turning on Silk. [Risks and why]: Low, just an extra check to make sure we don't enable silk unless hardware vsync is enabled. [String/UUID change made/needed]: None
Attachment #8568040 - Flags: approval-mozilla-aurora?
Attachment #8568040 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: