Bug 1133526. Only enable vsync compositor or refresh driver if hardware vsync is enabled. r=kats